add tests and cleanup